Changes by Jacob Barkdull 2017-08-09
--------------------------------------------------------------------------------
* Improved admin view "Back" button style.
* JavaScript: Only iterate over non-inherited object properties.
* Other minor CSS changes.


Changes by Jacob Barkdull 2017-04-11
--------------------------------------------------------------------------------
* "Notify me of replies" checkbox default state is now configurable.
* Escape HTML tags that get trimmed in half in the latest comments API.
* Added new CSS file for latest comments API.
* Added Greek locale by @Soulhub
* Small CSS changes; removed most transitions.
* Changed and added CSS Copyright notices.
* Vertically flipped the paint brush icon.
* Other minor improvements.


Changes by Jacob Barkdull 2017-03-15
--------------------------------------------------------------------------------
* Fixed big, em, small, strong, sub, and sup tags are now automatically closed.
* Automatically close tags that may have had their endings trimmed off.
* Localized all admin views.


Changes by Jacob Barkdull 2017-03-14
--------------------------------------------------------------------------------
* Date is now an absolute path in API and remote contexts.
* Limited event handlers in the latest comments API.


Changes by Jacob Barkdull 2017-03-13
--------------------------------------------------------------------------------
* Fixed JSONP shared code conflicts.


Changes by Jacob Barkdull 2017-03-12
--------------------------------------------------------------------------------
* Fixed shared frontend code conflicts

  When either an API was used on the same page as HashOver, or when two
  API were used on the same page together, the two or more scripts
  would conflict with each other because the shared prototype methods
  were being added to the constructor from the previous script.


Changes by Jacob Barkdull 2017-03-11
--------------------------------------------------------------------------------