@@ -2,6 +2,7 @@ Changes by Jacob Barkdull 2017-08-09
 --------------------------------------------------------------------------------
 * Improved admin view "Back" button style.
 * JavaScript: Only iterate over non-inherited object properties.
+* Fix/improve minified JavaScript copyright notice.
 * Other minor CSS changes.
 
 
